# pyoxe

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg
etc/: pyoxeconf.ini
pyoxeconf/: __init__.py  __main__.py  country-codes.json  ietf-language-tags.json  language-codes-full.json  nginx_rp.py  oms_config.py  oxe_access.py  oxe_commands.py  oxe_data_model.py  oxe_info.py  oxe_ip_domains.py  oxe_licensing.py  oxe_log.py  oxe_netadmin.py  oxe_rainbow.py  oxe_shelves.py  oxe_sip.py  oxe_swinst.py  oxe_systems.py  oxe_translator.py  oxe_users.py  oxe_voicemail.py  pilot2a.py  pyoxeconf.py  sipp.py
resources/: 00_oxes_runmao.sh  01_oxes_flex_wbm.sh  02_oxes_global_config.sh  03_oxes_users_provisioning.sh  04_oxes_rbw_connect.sh  05_oxes_rbw_disconnect.sh  06_oxes_sequentials_1stConn.sh  oxe-log.sh  oxes_testwbm.sh  oxes_wbm_restart.sh  sipp_uac_unregister.xml
resources/20170728/: 00-config_oxes.sh  02-disconnect_oxes.sh  03-sipp_registers_oxes.sh  04-reconnect_oxes.sh  sipp_dicts.sh
tests/: test_pyoxeconf.py
